--- a/tssrazor/Pages/Articles/Article.cshtml
+++ b/tssrazor/Pages/Articles/Article.cshtml
@@ -2,3 +2,18 @@
 @model tssrazor.Pages.Articles.ArticleModel
 @{
 }
+
+<div>
+    <div class="text-primary h2">@Model.Article.Title</div>
+    <hr />
+    <span>@Model.Article.PublishTime.ToString("yyyy年MM月dd日 HH时mm分ss秒")</span>
+    <span class="float-right">
+        <span>
+            作者：
+            <a href="/Articles/IndexByUser">@Model.Article.Author.Name</a>
+        </span>
+    </span>
+    <div>
+        @Model.Article.Body
+    </div>
+</div>
