--- a/tssrazor/Pages/Index.cshtml
+++ b/tssrazor/Pages/Index.cshtml
@@ -1,10 +1,13 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @for (int i = 0; i < 20; i++)
+    {
+        <h1 class="display-4">Welcome to Super StudySystem</h1>
+    }
 </div>
+
