RP: finished article modal and widget of _LayoutContent and _LayoutContentWidget with layout / section

--- a/tssrazor/Pages/Articles/Index.cshtml
+++ b/tssrazor/Pages/Articles/Index.cshtml
@@ -2,6 +2,7 @@
 @model tssrazor.Pages.Articles.IndexModel
 @{
     ViewData["Title"] = "Article";
+    Layout = "_LayoutContentWidget";
 }
 
 <div class="text-center">
