--- a/tssrazor/wwwroot/css/base.css
+++ b/tssrazor/wwwroot/css/base.css
@@ -8,6 +8,18 @@ body {
     padding-bottom: 50px;
 }
 
+.fixed-corner {
+    position: fixed;
+    top: 52px;
+    z-index: 1020;
+}
+
+.fixed-side {
+    position: fixed;
+    bottom: 150px;
+    z-index: 1020;
+}
+
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
@@ -18,6 +30,15 @@ body {
     vertical-align: top;
 }
 
+/* navbar container padding to default md (below breakpoint)
+------------------------------------------------------------ */
+@media (max-width: 767.98px) {
+    .navbar-expand-md > .container {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+
 /* navbar nav padding left right (below breakpoint)
 ------------------------------------------------------------ */
 .navbar-nav .nav-link {
@@ -25,19 +46,18 @@ body {
     padding-right: 0.5rem;
 }
 
-/* navbar no padding-y
+/* navbar no padding-y and padding-x
 ------------------------------------------------------------ */
-.navbar-py-0 {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
+.navbar-p-0 {
+    padding: 0 !important;
 }
 
-    .navbar-py-0 .navbar-brand {
+    .navbar-p-0 .navbar-brand {
         padding: 0.8125rem 0;
     }
 
 @media (min-width: 768px) {
-    .navbar-expand-md.navbar-py-0 .navbar-nav .nav-link {
+    .navbar-expand-md.navbar-p-0 .navbar-nav .nav-link {
         padding: 1rem 0.625rem;
     }
 }
@@ -113,4 +133,83 @@ body {
 
 .credit {
     color: rgba(203,180,26,1);
+}
+
+.link-box {
+    display: inline-block;
+    padding: 5px;
+    color: #337ab7;
+    background-color: lightblue;
+    border-radius: 0.25rem;
+}
+
+/* widget info nav-tabs nav-link
+------------------------------------------------------------ */
+.widget-nav .nav-tabs .nav-link {
+    background-color: #f5f5f5;
+    border-color: #dee2e6;
+    border-style: dashed;
+    border-bottom-style: solid;
+}
+
+    /* widget info nav-tabs nav-link active default (not changed)
+------------------------------------------------------------ */
+    .widget-nav .nav-tabs .nav-link.active {
+        color: #495057;
+        background-color: #fff;
+        border-color: #dee2e6 #dee2e6 #fff;
+        border-style: solid;
+    }
+
+/* modal right md display block and visible body only
+------------------------------------------------------------ */
+@media (min-width: 768px) {
+    .modal-md-visible-body.modal {
+        position: static;
+        z-index: auto;
+        display: block;
+        overflow: visible;
+        outline: initial;
+    }
+
+    .modal-md-visible-body.fade {
+        opacity: initial;
+        transition: none;
+    }
+
+    .modal-md-visible-body .modal-dialog {
+        position: static;
+        width: 100%;
+        max-width: none;
+        min-height: 0;
+        margin: 0;
+        pointer-events: auto;
+    }
+
+    .modal-md-visible-body.modal.fade .modal-dialog {
+        transition: none;
+        transform: none;
+    }
+
+    .modal-md-visible-body .modal-dialog-centered::before {
+        display: none;
+    }
+
+    .modal-md-visible-body .modal-content {
+        position: static;
+        display: block;
+        border: 0;
+        border-radius: 0;
+        outline: initial;
+    }
+
+    .modal-md-visible-body .modal-header, .modal-md-visible-body .modal-footer {
+        display: none;
+    }
+
+    .modal-md-visible-body .modal-body {
+        position: static;
+        flex: initial;
+        padding: 0;
+    }
 }
