--- a/tssrazor/Pages/Shared/_Layout.cshtml
+++ b/tssrazor/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             </span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a href="/Articles" class="dropdown-item">
+                            <a href="/Articles?pageIndex=1" class="dropdown-item">
                                 <span class="fa fa-list">
                                     <i class="fa">列表</i>
                                 </span>
