--- a/tssrazor/Pages/Shared/_LayoutContentWidget.cshtml
+++ b/tssrazor/Pages/Shared/_LayoutContentWidget.cshtml
@@ -38,21 +38,21 @@
     <div class="widget-nav mb-4">
         <ul class="nav nav-tabs flex-nowrap">
             <li class="nav-item flex-fill">
-                <a href="#supervise" class="nav-link" data-toggle="tab">
+                <a href="#supervise" class="nav-link text-center" data-toggle="tab">
                     <span class="fa fa-eye">
                         <i class="fa">每日督</i>
                     </span>
                 </a>
             </li>
             <li class="nav-item flex-fill">
-                <a href="#ranking" class="nav-link active" data-toggle="tab">
+                <a href="#ranking" class="nav-link text-center active" data-toggle="tab">
                     <span class="fa fa-heart text-danger">
                         <i class="fa">排行榜</i>
                     </span>
                 </a>
             </li>
             <li class="nav-item flex-fill">
-                <a href="#register" class="nav-link" data-toggle="tab">
+                <a href="#register" class="nav-link text-center" data-toggle="tab">
                     <span class="fa fa-user-circle-o">
                         <i class="fa">新注册</i>
                     </span>
