--- a/tssrazor/wwwroot/css/base.css
+++ b/tssrazor/wwwroot/css/base.css
@@ -213,3 +213,45 @@ body {
         padding: 0;
     }
 }
+
+/* nav pagination page link not click when active
+------------------------------------------------------------ */
+.page-item.active .page-link {
+    pointer-events: none;
+    cursor: auto;
+}
+
+/* multiline text overflow truncate (border-box)
+------------------------------------------------------------ */
+.text-intro {
+    display: block;
+    height: 3rem;
+    overflow: hidden;
+}
+
+    .text-intro::before {
+        float: left;
+        content: "";
+        width: 4rem;
+        height: 3rem;
+    }
+
+.text-intro-text {
+    float: right;
+    width: 100%;
+    margin-left: -4rem;
+    word-break: break-all;
+}
+
+.text-intro-overflow {
+    float: right;
+    width: 4rem;
+    height: 1.5rem;
+    margin-left: -4rem;
+    margin-right: 4rem;
+    position: relative;
+    left: 100%;
+    top: -1.5rem;
+    text-align: center;
+    background: linear-gradient(to right, rgba(255,255,255,0), white 30%, white);
+}
