RP: finished route custom and edited PageModel with RouteData

--- a/tssrazor/Pages/Articles/Index.cshtml
+++ b/tssrazor/Pages/Articles/Index.cshtml
@@ -21,11 +21,11 @@
                 </span>
             </div>
             <h4>
-                <a href="/Articles/Article?id=@item.Id">@item.Title</a>
+                <a href="/Article/@item.Id">@item.Title</a>
             </h4>
             <p class="mt-2 mb-2 text-intro">
                 <span class="text-intro-text">@item.Body</span>
-                <a href="/Articles/Article?id=@item.Id" class="text-muted text-intro-overflow" data-toggle="tooltip" title="全文">......</a>
+                <a href="/Article/@item.Id" class="text-muted text-intro-overflow" data-toggle="tooltip" title="全文">......</a>
             </p>
             <div>
                 <label>
@@ -69,7 +69,7 @@
         else
         {
             <li class="page-item">
-                <a href="/Articles?pageIndex=@(Model.PageIndex-1)" class="page-link">&laquo;</a>
+                <a href="/Article/Page/@(Model.PageIndex-1)" class="page-link">&laquo;</a>
             </li>
         }
 
@@ -84,7 +84,7 @@
             else
             {
                 <li class="page-item">
-                    <a href="/Articles?pageIndex=@i" class="page-link">@i</a>
+                    <a href="/Article/Page/@i" class="page-link">@i</a>
                 </li>
             }
 
@@ -99,7 +99,7 @@
         else
         {
             <li class="page-item">
-                <a href="/Articles?pageIndex=@(Model.PageIndex+1)" class="page-link">&raquo;</a>
+                <a href="/Article/Page/@(Model.PageIndex+1)" class="page-link">&raquo;</a>
             </li>
         }
 
