--- a/staticpage/Pages/Index.cshtml
+++ b/staticpage/Pages/Index.cshtml
@@ -3,8 +3,15 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<link href="/css/font-awesome.min.css" rel="stylesheet" />
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<pager path="/Index" pageIndex="3">第三页</pager>
+
+<!a asp-page="About">what</!a>
+
+<datetime asp-showicon="true" asp-only="">@DateTime.Now</datetime>
