RP: finished register form with Tag Helper and model bind by BindProperty

--- a/tssrazor/Pages/Shared/_LayoutContent.cshtml
+++ b/tssrazor/Pages/Shared/_LayoutContent.cshtml
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="row pt-5">
+<div class="row mt-5">
     <div class="col-md-8">
         <div class="fixed-corner d-block d-md-none">
             <a href="#modal-right" class="link-box" data-toggle="modal">
