--- a/tssrazor/Pages/Shared/_Layout.cshtml
+++ b/tssrazor/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             </span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" asp-page="/Articles/Index" asp-route-pageIndex="1" >
+                            <a class="dropdown-item" asp-page="/Articles/Index" asp-route-pageIndex="1">
                                 <span class="fa fa-list">
                                     <i class="fa">列表</i>
                                 </span>
@@ -232,6 +232,31 @@
                             </a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">
+                            <span class="fa fa-unlink">
+                                <i class="fa">未登录</i>
+                            </span>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href>
+                                <span class="fa fa-sign-in">
+                                    <i class="fa">登录</i>
+                                </span>
+                            </a>
+                            <a class="dropdown-item" asp-page="/Members/Register">
+                                <span class="fa fa-registered">
+                                    <i class="fa">注册</i>
+                                </span>
+                            </a>
+                            <a href="" class="dropdown-item">
+                                <span class="fa fa-unlock-alt">
+                                    <i class="fa">忘记密码</i>
+                                </span>
+                            </a>
+                        </div>
+                    </li>
+
                 </ul>
             </div>
         </div>
