--- a/tssrazor/wwwroot/css/base.css
+++ b/tssrazor/wwwroot/css/base.css
@@ -124,15 +124,15 @@ body {
 }
 
 .bean {
-    color: #9acd32;
+    color: #9acd32 !important;
 }
 
 .dot {
-    color: #5bb6ee;
+    color: #5bb6ee !important;
 }
 
 .credit {
-    color: rgba(203,180,26,1);
+    color: rgba(203,180,26,1) !important;
 }
 
 .link-box {
@@ -254,4 +254,24 @@ body {
     top: -1.5rem;
     text-align: center;
     background: linear-gradient(to right, rgba(255,255,255,0), white 30%, white);
+}
+
+/* .strong-info strong and .span-info span color info
+------------------------------------------------------------ */
+.strong-info strong, .span-info span {
+    color: #17a2b8;
+}
+
+/* register form style
+------------------------------------------------------------ */
+.border-dashed {
+    border: 2px dashed #eee;
+}
+
+.yellow-highlight {
+    background-color: #ffffe0;
+}
+
+.label-bold label {
+    font-weight: bold;
 }
