add _LayoutFixed.cshtml file and rename layout file

--- a/tssrazor/Pages/Articles/Article.cshtml
+++ b/tssrazor/Pages/Articles/Article.cshtml
@@ -2,7 +2,7 @@
 @model tssrazor.Pages.Articles.ArticleModel
 @{
     ViewData["Title"] = Model.Article.Title;
-    Layout = "_LayoutContentWidget";
+    Layout = "_LayoutFixedContentWidget";
 }
 
 <div>
