--- a/tssrazor/Pages/Members/Register.cshtml
+++ b/tssrazor/Pages/Members/Register.cshtml
@@ -2,7 +2,7 @@
 @model tssrazor.Pages.Members.RegisterModel
 @{
     ViewData["Title"] = "注册";
-    Layout = "_LayoutMember";
+    Layout = "_LayoutFixedMember";
 }
 
 @section TextHeader {
