--- a/tssrazor/Pages/Shared/_LayoutFixedContent.cshtml
+++ b/tssrazor/Pages/Shared/_LayoutFixedContent.cshtml
@@ -1,23 +1,6 @@
 ﻿@{
-    Layout = "_Layout";
+    Layout = "_LayoutFixed";
 }
-
-<div class="d-flex justify-content-end mr-md-n5">
-    <div class="fixed-side d-flex flex-column">
-        <a href="" class="link-box mb-1">
-            <span class="fa fa-question-circle-o text-center">
-                <br />
-                <i class="fa">帮助</i>
-            </span>
-        </a>
-        <a href="" class="link-box">
-            <span class="fa fa-comments-o text-center">
-                <br />
-                <i class="fa">反馈</i>
-            </span>
-        </a>
-    </div>
-</div>
 
 <div class="row mt-5">
     <div class="col-md-8">
